working redis cache, initial endpoints created
