# src/pylotlight/api/openapi_spec.yaml
@@ -195,10 +195,19 @@ components:
       properties:
         success:
           type: boolean
+          description: Indicates whether the log ingestion was successful
         message:
           type: string
+          description: A message describing the result of the log ingestion
         event_id:
           type: string
+          description: The unique identifier for the ingested log event
+        warnings:
+          type: array
+          items:
+            type: string
+          description: An array of warning messages related to the log ingestion process
+        
 
     BatchLogIngestionResponse:
       type: object
